--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>My AngularJS App</title>
   <link rel="stylesheet" href="css/app.css"/>
+  <link rel='stylesheet' href='css/bootstrap-combined.min.css'/>
 </head>
 <body>
   <ul class="menu">
@@ -24,5 +25,6 @@
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
