- update git ignore to ignore swap files - write a barebone server to run with "node server.js" - update package.json to include express - update bower.json to include bootstrap 3.x, still doesn't know how to use it yet - update index.html to use bootstrap

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
   <link rel="stylesheet" href="app.css"/>
-  <link rel='stylesheet' href='css/bootstrap-combined.min.css'/>
+  <link rel='stylesheet' href='app/bower_components/bootstrap/dist/css/bootstrap.css'/>
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
@@ -40,6 +40,6 @@
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
-  <script src="js/bootstrap.min.js"></script>
+  <script src="app/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
